--- a/cms/server/admin/templates/base.html
+++ b/cms/server/admin/templates/base.html
@@ -41,8 +41,8 @@ function init()
     setInterval(function() { utils.update_notifications(); }, 15000);
     {% else %}
     utils = new CMS.AWSUtils("{{ url() }}", {{ make_timestamp(timestamp) }},
-        {{ make_timestamp(contest.start) }}, {{ make_timestamp(contest.stop) }},
-        {{ make_timestamp(contest.analysis_start) }}, {{ make_timestamp(contest.analysis_stop) }},
+        {{ make_timestamp(contest.main_group.start) }}, {{ make_timestamp(contest.main_group.stop) }},
+        {{ make_timestamp(contest.main_group.analysis_start) }}, {{ make_timestamp(contest.main_group.analysis_stop) }},
         {{ phase }});
 
     {% if phase < 3 %}
@@ -235,6 +235,7 @@ $(document).ready(init);
             <li class="menu_entry"><a class="menu_link" href="{{ url("contest", contest.id, "submissions") }}">Submissions</a></li>
             {% if contest.allow_user_tests %}<li class="menu_entry"><a class="menu_link" href="{{ url("contest", contest.id, "user_tests") }}">User tests</a></li>{% end %}
             <li class="menu_entry"><a class="menu_link" href="{{ url("contest", contest.id, "users") }}">Users</a></li>
+            <li class="menu_entry"><a class="menu_link" href="{{ url("contest", contest.id, "groups") }}">Groups</a></li>
             <li class="menu_entry"><a class="menu_link" href="{{ url("contest", contest.id, "tasks") }}">Tasks</a></li>
             <li class="menu_entry"><a class="menu_link" href="{{ url("contest", contest.id, "announcements") }}">Announcements</a></li>
             <li class="menu_entry">
