--- a/cms/server/contest/templates/contest.html
+++ b/cms/server/contest/templates/contest.html
@@ -40,9 +40,9 @@ var utils = new CMS.CWSUtils("{{ url() }}", "{{ contest_url() }}",
                              {{ make_timestamp(current_phase_end) }},
                              {{ actual_phase }});
 $(document).ready(function () {
-    utils.update_time({{ "true" if contest.per_user_time is not None else "false" }});
+    utils.update_time({{ "true" if current_user.group.per_user_time is not None else "false" }});
     setInterval(function() {
-        utils.update_time({{ "true" if contest.per_user_time is not None else "false" }});
+        utils.update_time({{ "true" if current_user.group.per_user_time is not None else "false" }});
     }, 1000);
     utils.update_notifications();
     setInterval(function() { utils.update_notifications(); }, 30000);
