--- a/cms/server/contest/templates/overview.html
+++ b/cms/server/contest/templates/overview.html
@@ -13,7 +13,7 @@
 
 <h2>{{ _("General information") }}</h2>
 <div class="row">
-{% if contest.per_user_time is not None %}
+{% if current_user.group.per_user_time is not None %}
     <div class="span5">
 {% else %}
     <div class="span9">
@@ -23,36 +23,36 @@
         {{ _("The contest hasn't started yet.") }}
         </p>
         <p>
-        {{ _("The contest will start at %(start_time)s and will end at %(stop_time)s.") % {"start_time": format_datetime_smart(contest.start + current_user.delay_time, timezone, locale=locale), "stop_time": format_datetime_smart(contest.stop + current_user.delay_time + current_user.extra_time, timezone, locale=locale)} }}
+        {{ _("The contest will start at %(start_time)s and will end at %(stop_time)s.") % {"start_time": format_datetime_smart(current_user.group.start + current_user.delay_time, timezone, locale=locale), "stop_time": format_datetime_smart(current_user.group.stop + current_user.delay_time + current_user.extra_time, timezone, locale=locale)} }}
 {% elif phase == 0 %}
         {{ _("The contest is currently running.") }}
         </p>
         <p>
-        {{ _("The contest started at %(start_time)s and will end at %(stop_time)s.") % {"start_time": format_datetime_smart(contest.start + current_user.delay_time, timezone, locale=locale), "stop_time": format_datetime_smart(contest.stop + current_user.delay_time + current_user.extra_time, timezone, locale=locale)} }}
+        {{ _("The contest started at %(start_time)s and will end at %(stop_time)s.") % {"start_time": format_datetime_smart(current_user.group.start + current_user.delay_time, timezone, locale=locale), "stop_time": format_datetime_smart(current_user.group.stop + current_user.delay_time + current_user.extra_time, timezone, locale=locale)} }}
 {% elif phase >= +1 %}
         {{ _("The contest has already ended.") }}
         </p>
         <p>
-        {{ _("The contest started at %(start_time)s and ended at %(stop_time)s.") % {"start_time": format_datetime_smart(contest.start + current_user.delay_time, timezone, locale=locale), "stop_time": format_datetime_smart(contest.stop + current_user.delay_time + current_user.extra_time, timezone, locale=locale)} }}
+        {{ _("The contest started at %(start_time)s and ended at %(stop_time)s.") % {"start_time": format_datetime_smart(current_user.group.start + current_user.delay_time, timezone, locale=locale), "stop_time": format_datetime_smart(current_user.group.stop + current_user.delay_time + current_user.extra_time, timezone, locale=locale)} }}
 {% end %}
         </p>
-{% if contest.analysis_enabled %}
+{% if current_user.group.analysis_enabled %}
         <p>
   {% if phase == +1 %}
         {{ _("The analysis mode hasn't started yet.") }}
         </p>
         <p>
-        {{ _("The analysis mode will start at %(start_time)s and will end at %(stop_time)s.") % {"start_time": format_datetime_smart(contest.analysis_start, timezone, locale=locale), "stop_time": format_datetime_smart(contest.analysis_stop, timezone, locale=locale)} }}
+        {{ _("The analysis mode will start at %(start_time)s and will end at %(stop_time)s.") % {"start_time": format_datetime_smart(current_user.group.analysis_start, timezone, locale=locale), "stop_time": format_datetime_smart(current_user.group.analysis_stop, timezone, locale=locale)} }}
   {% elif phase == +2 %}
         {{ _("The analysis mode is currently running.") }}
         </p>
         <p>
-        {{ _("The analysis mode started at %(start_time)s and will end at %(stop_time)s.") % {"start_time": format_datetime_smart(contest.analysis_start, timezone, locale=locale), "stop_time": format_datetime_smart(contest.analysis_stop, timezone, locale=locale)} }}
+        {{ _("The analysis mode started at %(start_time)s and will end at %(stop_time)s.") % {"start_time": format_datetime_smart(current_user.group.analysis_start, timezone, locale=locale), "stop_time": format_datetime_smart(current_user.group.analysis_stop, timezone, locale=locale)} }}
   {% elif phase == +3 %}
         {{ _("The analysis mode has already ended.") }}
         </p>
         <p>
-        {{ _("The analysis mode started at %(start_time)s and ended at %(stop_time)s.") % {"start_time": format_datetime_smart(contest.analysis_start, timezone, locale=locale), "stop_time": format_datetime_smart(contest.analysis_stop, timezone, locale=locale)} }}
+        {{ _("The analysis mode started at %(start_time)s and ended at %(stop_time)s.") % {"start_time": format_datetime_smart(current_user.group.analysis_start, timezone, locale=locale), "stop_time": format_datetime_smart(current_user.group.analysis_stop, timezone, locale=locale)} }}
   {% end %}
         </p>
 
@@ -119,12 +119,12 @@
 {% end %}
 
     </div>
-{% if contest.per_user_time is not None %}
+{% if current_user.group.per_user_time is not None %}
     <div class="span4">
         <div class="well per_user_time">
             <p>
         {% comment TODO would be very nice to write something like "just for 3 consecutive hours"... %}
-        {{ _("Every user is allowed to compete (i.e. submit solutions) for a uninterrupted time frame of %(per_user_time)s.") % {"per_user_time": format_amount_of_time(contest.per_user_time.total_seconds(), precision=-1, locale=locale)} }}
+        {{ _("Every user is allowed to compete (i.e. submit solutions) for a uninterrupted time frame of %(per_user_time)s.") % {"per_user_time": format_amount_of_time(current_user.group.per_user_time.total_seconds(), precision=-1, locale=locale)} }}
             </p>
 
             <p>
