--- a/cms/server/templates/admin/submissionlist.html
+++ b/cms/server/templates/admin/submissionlist.html
@@ -25,10 +25,11 @@
       <tr>
         <th style="width: 10%">Time</th>
         <th style="width: 14%">User</th>
-        <th style="width: 35%">Status</th>
-        <th style="width: 15%">Files</th>
+        <th style="width: 32%">Status</th>
+        <th style="width: 13%">Files</th>
         <th style="width: 8%">Token</th>
-        <th style="width: 18%">Reevaluate</th>
+        <th style="width: 7">Patr.</th>
+        <th style="width: 16%">Reevaluate</th>
       </tr>
     </thead>
     <tbody>
@@ -120,6 +121,9 @@
           {% else %}
           Yes
           {% end %}
+        </td>
+        <td>
+          {{ s.short_comment }}
         </td>
         <td>
           {% set reevaluation_par_name = "submission" %}
