Evaluate public test cases separately
ES first creates a job for evaluating public test cases only that
has high priority (like compilations).
If it succeeds, a job for evaluation private test cases is queued
with medium priority and SS is informed.
When the private test cases have been evaluated, SS is informed again.

ScoreType is now able to separately assign public_score and score.

This commit does not include a dump updater, yet.

See #204.

--- a/cms/server/templates/admin/submission.html
+++ b/cms/server/templates/admin/submission.html
@@ -94,8 +94,12 @@
         <td>{{ sr.compilation_sandbox }}</td>
       </tr>
       <tr>
-        <td>Evaluation attempts</td>
-        <td>{{ sr.evaluation_tries }}</td>
+        <td>Evaluation attempts (public test cases)</td>
+        <td>{{ sr.public_evaluation_tries }}</td>
+      </tr>
+      <tr>
+        <td>Evaluation attempts (private test cases)</td>
+        <td>{{ sr.private_evaluation_tries }}</td>
       </tr>
       {% end %}
       <tr>
@@ -112,7 +116,7 @@
 
 </div>
 
-  {% if sr is not None and sr.scored() %}
+  {% if sr is not None and sr.scored(not s.tokened()) %}
 
 <h2 id="title_evaluation_user" class="toggling_on">Evaluation (as seen by the user)</h2>
 <div id="evaluation_user">
