--- a/cms/server/templates/contest/task_submissions.html
+++ b/cms/server/templates/contest/task_submissions.html
@@ -135,10 +135,16 @@ $(document).ready(function () {
 {% end %}
 </div>
 
+{% from cms.grading.scoretypes import get_score_type %}
+{% try %}
+    {% set score_type = get_score_type(dataset=task.active_dataset) %}
+{% except %}
+    {% set score_type = None %}
+{% end %}
 
 <h2 style="margin: 40px 0 10px">{{ _("Previous submissions") }}</h2>
 
-{% if tokens_contest != 0 and tokens_tasks != 0 %}
+{% if score_type is not None and score_type.feedback() == "token" %}
 <div style="padding-bottom:10px">
     {% set tokens_info = contest.tokens_available(current_user.username, task.name, timestamp) %}
     {% set can_play_token = tokens_info[0] > 0 or tokens_info[0] == -1 %}
@@ -178,13 +184,6 @@ $(document).ready(function () {
 {% end %}
 
 
-{% from cms.grading.scoretypes import get_score_type %}
-{% try %}
-    {% set score_type = get_score_type(dataset=task.active_dataset) %}
-{% except %}
-    {% set score_type = None %}
-{% end %}
-
 {% from cmscommon.datetime import utc %}
 {% set show_date = any(s.timestamp.replace(tzinfo=utc).astimezone(timezone).date() != datetime.datetime.utcnow().replace(tzinfo=utc).astimezone(timezone).date() for s in submissions) %}
 
@@ -197,14 +196,14 @@ $(document).ready(function () {
         <col class="time"/>
 {% end %}
         <col class="status"/>
-{% if score_type is not None and score_type.max_public_score != 0 %}
+{% if score_type is not None %}
         <col class="public_score"/>
-        <col class="total_score"/>
-{% else %}
+{% end %}
+{% if score_type is None or score_type.feedback() == "token" %}
         <col class="total_score"/>
 {% end %}
         <col class="files"/>
-{% if tokens_contest != 0 and tokens_tasks != 0 %}
+{% if score_type is not None and score_type.feedback() == "token" %}
         <col class="token"/>
 {% end %}
     </colgroup>
@@ -216,14 +215,14 @@ $(document).ready(function () {
             <th class="time">{{ _("Time") }}</th>
 {% end %}
             <th class="status">{{ _("Status") }}</th>
-{% if score_type is not None and score_type.max_public_score != 0 %}
+{% if score_type is not None and score_type.feedback() == "token" %}
             <th class="public_score">{{ _("Public score") }}</th>
             <th class="total_score">{{ _("Total score") }}</th>
 {% else %}
-            <th class="total_score">{{ _("Score") }}</th>
+            <th class="public_score">{{ _("{} score").format(_("Total") if score_type.feedback() == "full" else _("Public")) }}</th>
 {% end %}
             <th class="files">{{ _("Files") }}</th>
-{% if tokens_contest != 0 and tokens_tasks != 0 %}
+{% if score_type is not None and score_type.feedback() == "token" %}
             <th class="token">{{ _("Token") }}</th>
 {% end %}
         </tr>
