--- a/cms/server/templates/admin/submissionlist.html
+++ b/cms/server/templates/admin/submissionlist.html
@@ -57,14 +57,22 @@
             <div  id="evaluation_{{ s.id }}" class="score_details" style="display: none;">
             {% elif sr.scored() %}
               {% try %}
-                {% set max_score = current_score_type.max_score %}
+                {% if s.is_unit_test() %}
+                  {% set max_score = current_score_type.unit_test_expected_scores(s.additional_info)[1] %}
+                {% else %}
+                  {% set max_score = current_score_type.max_score %}
+                {% end %}
               {% except %}
                 {% set max_score = "[Cannot get score type - see logs]" %}
               {% end %}
             Evaluated ({{ sr.score }} / {{ max_score }})
             <div class="score_details" id="evaluation_{{ s.id }}" style="display: none;">
               {% try %}
-                {% raw current_score_type.get_html_details(sr.score_details) %}
+                {% if s.is_unit_test() %}
+                  {% raw current_score_type.get_html_details(sr.unit_test_score_details) %}
+                {% else %}
+                  {% raw current_score_type.get_html_details(sr.score_details) %}
+                {% end %}
               {% except %}
               [Cannot get score type - see logs]
               {% end %}
