--- a/cms/server/templates/contest/unit_test_row.html
+++ b/cms/server/templates/contest/unit_test_row.html
@@ -14,7 +14,7 @@
     <td class="public_score undefined">{{ _("N/A") }}</td>
     <td class="total_score undefined">{{ _("N/A") }}</td>
     {% end %}
-    <td class="datetime"> {{ _("pending...") }} </td>
+    <td class="verdict"> {{ _("pending...") }} </td>
 {% elif sr.compilation_outcome == "fail" %}
 <tr data-submission="{{ s_idx }}" data-status="2">
     {% raw col1 %}
@@ -27,7 +27,7 @@
     <td class="total_score undefined">{{ _("N/A") }}</td>
     {% end %}
     {% comment TODO %}
-    <td class="datetime"> {{ _("oops") }} </td>
+    <td class="verdict"> {{ _("oops") }} </td>
 {% elif not sr.evaluated(False) %}
 <tr data-submission="{{ s_idx }}" data-status="3">
     {% raw col1 %}
@@ -38,7 +38,7 @@
     <td class="public_score undefined">{{ _("N/A") }}</td>
     <td class="total_score undefined">{{ _("N/A") }}</td>
     {% end %}
-    <td class="datetime">{{ _("pending...") }} </td>
+    <td class="verdict">{{ _("pending...") }} </td>
 {% elif not sr.scored(False) %}
 <tr data-submission="{{ s_idx }}" data-status="4">
     {% raw col1 %}
@@ -55,7 +55,7 @@
     {% raw col1 %}
     <td class="status">
         {{ _("Evaluated") }}
-        <a class="details">{{ _("details") }}</a>
+        <a class="details" style="float:right;cursor:pointer;">{{ _("details") }}</a>
     </td>
 
     {% if score_type is not None %}
@@ -78,6 +78,6 @@
         </td>
         {% end %}
     {% end %}
-    <td class="datetime"> ??? </td>
+    <td class="verdict"> {{verdict[1]}} </td>
 {% end %}
 </tr>
