--- a/cms/server/templates/contest/unit_test_row.html
+++ b/cms/server/templates/contest/unit_test_row.html
@@ -51,7 +51,12 @@
     {% end %}
     <td class="datetime">{{ _("pending...") }} </td>
 {% else %}
-    {% set bgc = "class=\"%s\"" % ("score_100" if score_type.verdict()[0] == 1 else "score_0") %}
+    {% set details = json.loads(sr.score_details) %}
+    {% set verdict = (0, None) %}
+    {% if "verdict" in details %}
+        {% set verdict = details["verdict"] %}
+    {% end %}
+    {% set bgc = "class=\"%s\"" % ("score_100" if verdict[0] == 1 else "score_0") %}
 <tr data-submission="{{ s_idx }}" data-status="5" 
     {% raw bgc %}>
     {% raw col1 %}
@@ -62,12 +67,12 @@
 
     {% if score_type is not None %}
     <td class="public_score {{ get_score_class(sr.public_score, score_type.max_public_score) }}">
-            {{ "%g" % round(sr.public_score, task.score_precision) }} / {{ "%g" % round(score_type.max_public_score, task.score_precision) }}
+            {{ "%g" % round(sr.public_score, task.score_precision) }} / {{ "%g" % round(score_type.max_scores()[0], task.score_precision) }}
     </td>
         {% if True %}
             {% if score_type is not None and score_type.max_score != 0 %}
         <td class="total_score {{ get_score_class(sr.score, score_type.max_score) }}">
-                {{ "%g" % round(sr.score, task.score_precision) }} / {{ "%g" % round(score_type.max_score, task.score_precision) }}
+                {{ "%g" % round(sr.score, task.score_precision) }} / {{ "%g" % round(score_type.max_scores()[1], task.score_precision) }}
         </td>
             {% else %}
         <td class="total_score">
