--- a/cms/server/templates/admin/user.html
+++ b/cms/server/templates/admin/user.html
@@ -29,6 +29,7 @@ function update_additional_answer(element, invoker)
 
 {% block core %}
 {% from cms.grading.scoretypes import get_score_type %}
+{% set score_types = {} %}
 
 <h1>{{ selected_user.first_name }} {{ selected_user.last_name }} ({{ selected_user.username }})</h1>
 
@@ -55,7 +56,12 @@ function update_additional_answer(element, invoker)
       {% for s in sorted(submissions, key=lambda s: s.timestamp, reverse=True) %}
         {% set dataset = s.task.active_dataset %}
         {% set sr = s.get_result(dataset) %}
-        {% set score_type = get_score_type(dataset=dataset, info=s.additional_info) %}
+        {% if s.task.name in score_types %}
+          {% set score_type = score_types[s.task.name] %}
+        {% else %}
+          {% set score_type = get_score_type(dataset=dataset) %}
+          {% set score_types[s.task.name] = score_type %}
+        {% end %}
       <tr>
         <td><a href="{{ url_root }}/submission/{{ s.id }}">{{ str(s.timestamp) }}</a></td>
         <td><a href="{{ url_root }}/task/{{ s.task.id }}">{{ s.task.name }}</a></td>
@@ -78,7 +84,7 @@ function update_additional_answer(element, invoker)
               {% end %}
             Evaluated ({{ sr.score }} / {{ max_score }})
             <div  id="evaluation_{{ s.id }}" class="score_details" style="display: none;">
-              {% if score_type.is_unit_test() %}
+              {% if s.is_unit_test() %}
                 {% raw score_type.get_html_details(sr.unit_test_score_details) %}
               {% else %}
                 {% raw score_type.get_html_details(sr.score_details) %}
